--- a/simple-github/src/main/res/layout/activity_repository.xml
+++ b/simple-github/src/main/res/layout/activity_repository.xml
@@ -1,188 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="12dp"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
-    android:paddingTop="12dp">
+    android:paddingTop="10dp">
 
-    <LinearLayout
-        android:id="@+id/llActivityRepositoryContent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="?android:listDivider"
-        android:orientation="vertical"
-        android:showDividers="middle">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp">
-
-            <ImageView
-                android:id="@+id/ivActivityRepositoryProfile"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                tools:src="@drawable/ic_launcher_background" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_toEndOf="@+id/ivActivityRepositoryProfile"
-                android:layout_toRightOf="@id/ivActivityRepositoryProfile"
-
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tvActivityRepositoryName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:maxLines="2"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:textColor="@color/githubBlue"
-                    tools:text="username/myrepository" />
-
-                <TextView
-                    android:id="@+id/tvActivityRepositoryStars"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_star_black"
-                    android:drawableStart="@drawable/ic_star_black"
-                    android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="@color/githubBlack"
-                    tools:text="100 Stars" />
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="12dp"
-            android:paddingTop="12dp">
-
-            <ImageView
-                android:id="@+id/ivActivityRepositoryDescription"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/ic_description_black"
-                android:tint="@color/gray" />
-
-            <TextView
-                android:id="@+id/tvActivityRepositoryDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="My Description" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvActivityRepositoryDescription"
-                android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
-                android:text="@string/description"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="12dp"
-            android:paddingTop="12dp">
-
-            <ImageView
-                android:id="@+id/ivActivityRepositoryLanguage"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/ic_language_black"
-                android:tint="@color/gray" />
-
-            <TextView
-                android:id="@+id/tvActivityRepositoryLanguage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="Kotlin" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvActivityRepositoryLanguage"
-                android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
-                android:text="@string/language"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="12dp"
-            android:paddingTop="12dp">
-
-            <ImageView
-                android:id="@+id/ivActivityRepositoryLastUpdate"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/ic_update_black"
-                android:tint="@color/gray" />
-
-            <TextView
-                android:id="@+id/tvActivityRepositoryLastUpdate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="yyyy/MM/dd" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvActivityRepositoryLastUpdate"
-                android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
-                android:text="@string/last_update"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/pbActivityRepository"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
+    <ImageView
+        android:id="@+id/ivActivityRepositoryProfile"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        tools:src="@drawable/ic_launcher_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvActivityRepositoryMessage"
+        android:id="@+id/tvActivityRepositoryName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/githubBlack" />
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:maxLines="2"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="@color/githubBlue"
+        tools:text="username/myrepository"
+        app:layout_constraintBottom_toTopOf="@id/tvActivityRepositoryStars"
+        app:layout_constraintStart_toEndOf="@id/ivActivityRepositoryProfile"
+        app:layout_constraintTop_toTopOf="@id/ivActivityRepositoryProfile"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvActivityRepositoryStars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_star_black"
+        android:drawableStart="@drawable/ic_star_black"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:textColor="@color/githubBlack"
+        tools:text="100 Stars"
+        app:layout_constraintBottom_toBottomOf="@id/ivActivityRepositoryProfile"
+        app:layout_constraintStart_toStartOf="@id/tvActivityRepositoryName"
+        app:layout_constraintTop_toBottomOf="@id/tvActivityRepositoryName"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <ImageView
+        android:id="@+id/ivActivityRepositoryDescription"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_description_black"
+        android:tint="@color/gray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivActivityRepositoryProfile" />
+
+    <TextView
+        android:id="@+id/tvActivityRepositoryDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:text="My Description"
+        app:layout_constraintBottom_toTopOf="@id/tv1"
+        app:layout_constraintStart_toEndOf="@id/ivActivityRepositoryDescription"
+        app:layout_constraintTop_toTopOf="@id/ivActivityRepositoryDescription" />
+
+
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/description"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        app:layout_constraintBottom_toBottomOf="@id/ivActivityRepositoryDescription"
+        app:layout_constraintStart_toStartOf="@id/tvActivityRepositoryDescription"
+        app:layout_constraintTop_toBottomOf="@id/tvActivityRepositoryDescription" />
+
+
+    <ImageView
+        android:id="@+id/ivActivityRepositoryLanguage"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_language_black"
+        android:tint="@color/gray"
+        app:layout_constraintStart_toStartOf="@id/ivActivityRepositoryDescription"
+        app:layout_constraintTop_toBottomOf="@id/ivActivityRepositoryDescription" />
+
+    <TextView
+        android:id="@+id/tvActivityRepositoryLanguage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        tools:text="Kotlin"
+        app:layout_constraintBottom_toTopOf="@id/tv2"
+        app:layout_constraintStart_toStartOf="@id/tv1"
+        app:layout_constraintTop_toTopOf="@id/ivActivityRepositoryLanguage" />
+
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/language"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        app:layout_constraintBottom_toBottomOf="@id/ivActivityRepositoryLanguage"
+        app:layout_constraintStart_toStartOf="@id/tvActivityRepositoryLanguage"
+        app:layout_constraintTop_toBottomOf="@id/tvActivityRepositoryLanguage" />
+
+
+    <ImageView
+        android:id="@+id/ivActivityRepositoryLastUpdate"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_update_black"
+        android:tint="@color/gray"
+        app:layout_constraintStart_toStartOf="@id/ivActivityRepositoryLanguage"
+        app:layout_constraintTop_toBottomOf="@id/ivActivityRepositoryLanguage" />
+
+    <TextView
+        android:id="@+id/tvActivityRepositoryLastUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@id/tv3"
+        app:layout_constraintStart_toStartOf="@id/tv2"
+        app:layout_constraintTop_toTopOf="@id/ivActivityRepositoryLastUpdate"
+        tools:text="yyyy/MM/dd" />
+
+    <TextView
+        android:id="@+id/tv3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/last_update"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        app:layout_constraintBottom_toBottomOf="@id/ivActivityRepositoryLastUpdate"
+        app:layout_constraintStart_toStartOf="@id/tvActivityRepositoryLastUpdate"
+        app:layout_constraintTop_toBottomOf="@id/tvActivityRepositoryLastUpdate" />
+
+
+</android.support.constraint.ConstraintLayout>
