--- a/simple-github/src/main/res/layout/item_repository.xml
+++ b/simple-github/src/main/res/layout/item_repository.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="72dp"
-    android:background="?attr/selectableItemBackground"
     android:paddingLeft="12dp"
     android:paddingRight="12dp">
 
@@ -11,36 +11,36 @@
         android:id="@+id/ivItemRepositoryProfile"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_centerVertical="true"
-        tools:src="@drawable/ic_launcher_background" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:ignore="VectorDrawableCompat" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvItemRepositoryName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
-        android:layout_toEndOf="@+id/ivItemRepositoryProfile"
-        android:layout_toRightOf="@+id/ivItemRepositoryProfile"
-        android:orientation="vertical">
+        android:text="Owner/Repository"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/githubBlack"
+        app:layout_constraintBottom_toTopOf="@+id/tvItemRepositoryLanguage"
+        app:layout_constraintStart_toEndOf="@+id/ivItemRepositoryProfile"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-        <TextView
-            android:id="@+id/tvItemRepositoryName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/githubBlack"
-            tools:text="Owner/Repository" />
-
-        <TextView
-            android:id="@+id/tvItemRepositoryLanguage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            tools:text="Language" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvItemRepositoryLanguage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
+        android:text="Language"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ivItemRepositoryProfile"
+        app:layout_constraintTop_toBottomOf="@+id/tvItemRepositoryName" />
+</android.support.constraint.ConstraintLayout>
